added frontend server in cors backend and made simple landing page with login/register form to check fetches from back - it works

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Event Booker</title>
   </head>
   <body>
-    <h1>Event Booking app by Sue!!! </h1>
+    <noscript>Sue's Event Booking app</noscript>
+    <div id="root"></div>
   </body>
 </html>
