started work to PWA, not fully working yet

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,9 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Event Booker</title>
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.webmanifest">
+    <link rel="icon" href="%PUBLIC_URL%/icons/logo2-192.png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/logo2-192.png">
+    <meta name="theme-color" content="#1976d2">
+
   </head>
   <body>
     <noscript>Sue's Event Booking app</noscript>
